added more icons

--- a/public/assets/sass/public.scss
+++ b/public/assets/sass/public.scss
@@ -53,12 +53,12 @@
 		}
 	}
 
-	.bio-icon-facebook {
-		background-position: -16px 0;
-	}
-
 	.bio-icon-twitter {
 		background-position: 0 0;
+	}
+
+	.bio-icon-facebook {
+		background-position: -16px 0;
 	}
 
 	.bio-icon-googleplus {
@@ -71,5 +71,21 @@
 
 	.bio-icon-website {
 		background-position: -64px 0;
+	}
+
+	.bio-icon-flickr {
+		background-position: -80px 0;
+	}
+
+	.bio-icon-tumblr {
+		background-position: -96px 0;
+	}
+
+	.bio-icon-vimeo {
+		background-position: -112px 0;
+	}
+
+	.bio-icon-youtube {
+		background-position: -128px 0;
 	}
 }
