added instagram and pinterest options

--- a/assets/css/author-bio-box.scss
+++ b/assets/css/author-bio-box.scss
@@ -78,14 +78,22 @@
 	}
 
 	.bio-icon-tumblr {
-		background-position: -96px 0;
+		background-position: -95px 0;
 	}
 
 	.bio-icon-vimeo {
-		background-position: -112px 0;
+		background-position: -111px 0;
 	}
 
 	.bio-icon-youtube {
-		background-position: -128px 0;
+		background-position: -127px 0;
+	}
+
+	.bio-icon-instagram {
+		background-position: -143px 0;
+	}
+
+	.bio-icon-pinterest {
+		background-position: -159px 0;
 	}
 }
