Add three fediverse options
Add options and icons for Mastodon, PixelFed, and PeerTube.

Tested with WordPress 6.1

--- a/assets/css/author-bio-box.scss
+++ b/assets/css/author-bio-box.scss
@@ -96,4 +96,16 @@
 	.bio-icon-pinterest {
 		background-position: -159px 0;
 	}
+
+	.bio-icon-mastodon {
+		background-position: -175px 0;
+	}
+
+	.bio-icon-pixelfed {
+		background-position: -191px 0;
+	}
+
+	.bio-icon-peertube {
+		background-position: -207px 0;
+	}
 }
